added post method to login form

--- a/html/login.html
+++ b/html/login.html
@@ -20,7 +20,7 @@
   </div>
   <div class="centered"> 
     <h3>Login</h3>
-    <form>
+    <form id="login" action="post">
         <div>
              <label for="username">Usuario</label>
              <input type="string" name="username" value="">
