added post method to register form

--- a/html/register.html
+++ b/html/register.html
@@ -20,7 +20,7 @@
   </div>
   <div class="centered"> 
     <h3>Login</h3>
-    <form id="register">
+    <form id="register" action="post">
         <div>
              <label for="Nombre">Nombre</label>
              <input type="string" name="firstname" value="">
