--- a/html/login.html
+++ b/html/login.html
@@ -7,7 +7,8 @@
   <meta name="author" content="SitePoint"> -->
 
   <link rel="stylesheet" href="../css/login.css">
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.js"></script>
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
@@ -31,5 +32,8 @@
         </div>
     </form>
   </div>
+
+
+  <script src="../js/login.js"></script>
 </body>
 </html>
