added plugins and tools needed for the site

--- a/html/register.html
+++ b/html/register.html
@@ -6,8 +6,9 @@
   <!-- <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint"> -->
 
-  <link rel="stylesheet" href="../css/login.css">
-
+  <link rel="stylesheet" href="../css/register.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.js"></script>
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
@@ -47,5 +48,8 @@
         </div>
     </form>
   </div>
+
+  <script src="../js/register.js"></script>
+  
 </body>
 </html>
