--- a/html/login.html
+++ b/html/login.html
@@ -1,39 +1,55 @@
 <html lang="en">
-<head>
-  <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8">
 
-  <title>Universys</title>
-  <!-- <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint"> -->
+    <title>Universys</title>
+    <!-- <meta name="description" content="The HTML5 Herald">
+    <meta name="author" content="SitePoint"> -->
 
-  <link rel="stylesheet" href="../css/login.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.js"></script>
-  <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-  <![endif]-->
-</head>
+    <link rel="stylesheet" href="../css/login.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.js"></script>
+    <!--[if lt IE 9]>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+    <![endif]-->
+  </head>
 
-<body>
-  <!-- <script src="js/login.js"></script> -->
-  <div class="centered">
-    <h1>Bienvenido a Universys</h1>    
-  </div>
-  <div class="centered"> 
-    <h3>Login</h3>
-    <form id="login" action="post">
-        <div>
-             <label for="username">Usuario</label>
-             <input type="string" name="username" value="">
+  <body>
+    <!-- <script src="js/login.js"></script> -->
+    <div class="container">
+        <div class="centered col-md-12">
+          <h1>Bienvenido a Universys</h1>    
         </div>
-        <div>
-             <label for="password">Usuario</label>
-             <input type="string" name="password" value="">
+        <div class="centered row"> 
+          <!-- <h3>Login</h3> -->
+          <form id="login" action="post">
+            <div class="row">
+              <div class="col-md-6">
+                  <label class="centered" for="username">Usuario: </label>                
+              </div>
+              <div class="col-md-6">
+                  <input class="centered" type="string" name="username" value="">
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                  <label class="centered" for="password">Contraseña: </label>
+              </div>
+              <div class="col-md-6">
+                  <input class="centered" type="string" name="password" value="">
+              </div>
+            </div>
+            <div>
+                <button type="submit" id="submit" name="submit">Ingresar</button>
+            </div>
+          </form>
         </div>
-    </form>
-  </div>
+    </div>
 
-
-  <script src="../js/login.js"></script>
-</body>
+    <script src="../js/login.js"></script>
+  </body>
 </html>
