--- a/html/login.html
+++ b/html/login.html
@@ -22,7 +22,7 @@
     <!-- <script src="js/login.js"></script> -->
     <div class="container">
         <div class="centered col-md-12">
-          <h1>Bienvenido a Universys</h1>    
+          <h1>Iniciar sesión:</h1>    
         </div>
         <div class="centered row"> 
           <!-- <h3>Login</h3> -->
