Cambio de Navbar para perfil Público

--- a/html/home.html
+++ b/html/home.html
@@ -31,8 +31,7 @@
                     <li><a href="./carreras.html">Carreras</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Placeholder usuario</a></li>
-                    <li><a href="#">Cerrar sesion</a></li>
+                    <li><a href="#">Iniciar Sesión</a></li>
                 </ul>
             </div>
         </div>
