--- a/html/carreras.html
+++ b/html/carreras.html
@@ -10,7 +10,7 @@
     <script src="http://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
-    <link href="../css/historia.css" rel="stylesheet">
+    <link href="../css/carreras.css" rel="stylesheet">
 </head>
 <body>
     <!-- Navbar -->
@@ -19,24 +19,33 @@
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
                     aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-                <a class="navbar-brand" href="./home.html"><strong>Universys</strong> Home</a>
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="./home.html">
+                    <strong>Universys</strong> Home</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="./historia.html">Historia</a></li>
-                    <li class="active"><a href="#">Carreras <span class="sr-only">(current)</span></a></li>
+                    <li>
+                        <a href="./historia.html">Historia</a>
+                    </li>
+                    <li class="active">
+                        <a href="#">Carreras
+                            <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Placeholder usuario</a></li>
-                    <li><a href="#">Cerrar sesion</a></li>
+                    <li><a href="#">Iniciar Sesión</a></li>
                 </ul>
             </div>
         </div>
     </nav>
+    <div id="contenedor">
+        
+    </div>
 </body>
 </html>
