--- a/html/register.html
+++ b/html/register.html
@@ -25,28 +25,30 @@
       <form id="register" action="post">
           <div>
               <label for="Nombre" id="firstname_lbl">Nombre</label>
-              <input type="string" name="firstname" id="firstname" value="">
+              <input class="empty" type="string" name="firstname" id="firstname" value="">
           </div>
           <div>
               <label for="lastname" id="lastname_lbl">Apellido</label>
-              <input type="string" name="lastname" id="lastname" value="">
+              <input class="empty" type="string" name="lastname" id="lastname" value="">
           </div>
           <div>
               <label for="matricula" id="matricula_lbl">matricula</label>
-              <input type="string" name="matricula" id="matricula" value="">
+              <input class="empty" type="string" name="matricula" id="matricula" value="">
           </div>
           <div>
               <label for="username" id="username_lbl">Usuario</label>
-              <input type="string" name="username" id="username" value="">
+              <input class="empty" type="string" name="username" id="username" value="">
           </div>
           <div>
               <label for="password">Contraseña</label>
-              <input type="string" name="password" id="password" value="">
+              <input class="empty" type="string" name="password" id="password" value="">
           </div>
           <div>
               <label for="confirm_password">Confirmar contraseña</label>
-              <input type="string" name="confirm_password" id="confirm_password" value="">
+              <input class="empty" type="string" name="confirm_password" id="confirm_password" value="">
           </div>
+          <br>
+          <button id="submit">Enviar</button>
       </form>
     </div>
   </div>
