Agregado de class empty y boton id submit

--- a/html/registerCatedras.html
+++ b/html/registerCatedras.html
@@ -37,42 +37,42 @@
           <form id="registerCatedras" action="post"> <!--Formulario para poder registrarse -->
               <div>
                   <label for="CodigoCatedra" id="codigoCatedra_lbl">Código de Cátedra:</label>
-                  <input type="int" name="codigoCatedra" id="codigoCatedra" value="">
+                  <input class="empty" type="int" name="codigoCatedra" id="codigoCatedra" value="">
               </div>
               <div>
                   <label for="CodigoMateria" id="codigoMateria_lbl">Código de Materia:</label>
-                  <input type="int" name="codigoMateria" id="codigoMateria" value="">
+                  <input class="empty" type="int" name="codigoMateria" id="codigoMateria" value="">
               </div>
               <div>
                   <label for="MateriaCatedra" id="materiaCatedra_lbl">Materia de la Cátedra:</label>
-                  <input type="string" name="materiaCatedra" id="materiaCatedra" value="">
+                  <input class="empty" type="string" name="materiaCatedra" id="materiaCatedra" value="">
               </div>
               <div>
                   <label for="AulaAsignada" id="aulaAsignada_lbl">Aula asignada:</label>
-                  <input type="int" name="aulaAsignada" id="aulaAsignada" value="">
+                  <input class="empty" type="int" name="aulaAsignada" id="aulaAsignada" value="">
               </div>
               <div>
                 <label for="HorarioCatedra" id="horarioCatedra_lbl">Horario de la Cátedra:</label>
-                <input type="time" name="horarioCatedra" id="horarioCatedra" value="">
+                <input class="empty" type="time" name="horarioCatedra" id="horarioCatedra" value="">
             </div>
             <div>
                 <label for="DiasCatedra" id="diascatedra_lbl">Dias de Cátedra:</label>
-                <input type="date" name="diascatedra" id="diascatedras" value="">
+                <input class="empty" type="date" name="diascatedra" id="diascatedras" value="">
             </div>
             <div>
                 <label for="NyAProfesor" id="nyAProfesor_lbl">Nombre y apellido del Profesor asignado:</label>
-                <input type="string" name="nyAProfesor" id="nyAProfesor" value="">
+                <input class="empty" type="string" name="nyAProfesor" id="nyAProfesor" value="">
             </div>
             <div>
                 <label for="IdAsignado" id="idAsignado_lbl">ID del Profesor asignado:</label>
-                <input type="int" name="idAsignado" id="idAsignado" value="">
+                <input class="empty" type="int" name="idAsignado" id="idAsignado" value="">
             </div>
             <div>
               <label for="Vacante" id="vacante_lbl">Vacante:</label>
-              <input type="boolean" name="vacante" id="vacante" value="">
+              <input class="empty" type="boolean" name="vacante" id="vacante" value="">
           </div>
               <br>
-               <button>Enviar</button> <!--Boton para enviar el formulario -->
+               <button id="submit">Enviar</button> <!--Boton para enviar el formulario -->
           </form>
         </div>
       </div>
