agregado de class empty a los input y al boton el id submit

--- a/html/registerCareers.html
+++ b/html/registerCareers.html
@@ -37,18 +37,18 @@
           <form id="registerCareers" action="post"> <!--Formulario para poder registrarse -->
               <div>
                   <label for="Codigo" id="codigo_lbl">Código:</label>
-                  <input type="int" name="codigo" id="codigo" value="">
+                  <input class="empty" type="int" name="codigo" id="codigo" value="">
               </div>
               <div>
                   <label for="nombre" id="nombre_lbl">Nombre de la Carrera:</label>
-                  <input type="string" name="nombre" id="nombre" value="">
+                  <input class="empty" type="string" name="nombre" id="nombre" value="">
               </div>
               <div>
                   <label for="Duracion" id="duracion_lbl">Duración:</label>
-                  <input type="duracion" name="duracion" id="duracion" value="">
+                  <input class="empty" type="duracion" name="duracion" id="duracion" value="">
               </div>
               <br>
-               <button>Enviar</button> <!--Boton para enviar el formulario -->
+               <button id="empty">Enviar</button> <!--Boton para enviar el formulario -->
           </form>
         </div>
       </div>
