Agregado de class empty a los input y el id submit al boton

--- a/html/registerSubjects.html
+++ b/html/registerSubjects.html
@@ -37,22 +37,22 @@
           <form id="registerSubjects" action="post"> <!--Formulario para poder registrarse -->
               <div>
                   <label for="Codigo" id="codigo_lbl">Código:</label>
-                  <input type="int" name="codigo" id="codigo" value="">
+                  <input class="empty" type="int" name="codigo" id="codigo" value="">
               </div>
               <div>
                   <label for="nombre" id="nombre_lbl">Nombre de la Materia:</label>
-                  <input type="string" name="nombre" id="nombre" value="">
+                  <input class="empty" type="string" name="nombre" id="nombre" value="">
               </div>
               <div>
                   <label for="IdProfesor" id="id_lbl">ID Profesor:</label>
-                  <input type="int" name="idProfesor" id="idProfesor" value="">
+                  <input class="empty" type="int" name="idProfesor" id="idProfesor" value="">
               </div>
               <div>
                   <label for="NombreProfesor" id="nombreProfesor_lbl">Nombre del profesor asignado:</label>
-                  <input type="string" name="nombreProfesor" id="nombreProfesor" value="">
+                  <input class="empty" type="string" name="nombreProfesor" id="nombreProfesor" value="">
               </div>
               <br>
-               <button>Enviar</button> <!--Boton para enviar el formulario -->
+               <button id="submit">Enviar</button> <!--Boton para enviar el formulario -->
           </form>
         </div>
       </div>
