--- a/html/carreras.html
+++ b/html/carreras.html
@@ -10,8 +10,7 @@
     <script src="http://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
-    <link href="../css/carreras.css" rel="stylesheet">
-</head>
+    <link href="../css/carreras.css" rel="stylesheet"> </head>
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-default">
@@ -29,14 +28,8 @@
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li>
-                        <a href="./historia.html">Historia</a>
-                    </li>
-                    <li class="active">
-                        <a href="#">Carreras
-                            <span class="sr-only">(current)</span>
-                        </a>
-                    </li>
+                    <li><a href="./historia.html">Historia</a></li>
+                    <li class="active"><a href="./carreras.html">Carreras<span class="sr-only">(current)</span></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
@@ -47,7 +40,7 @@
         </div>
     </nav>
 
-    <section>
+    <section class="contenedor">
         <!-- Lista de Carreras -->
         <div class="listaCarreras">
             <h1>Carreras</h1>
