--- a/Carreras/html/marketing.html
+++ b/Carreras/html/marketing.html
@@ -32,11 +32,7 @@
                     <li>
                         <a href="../../html/historia.html">Historia</a>
                     </li>
-                    <li class="active">
-                        <a href="#">Carreras
-                            <span class="sr-only">(current)</span>
-                        </a>
-                    </li>
+                    <li class="active"><a href="../../html/carreras.html">Carreras<span class="sr-only">(current)</span></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
