WIP perfilAlumno y DOCTYPE agregados, login linkeado con reiniciarContraseña

--- a/html/login.html
+++ b/html/login.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -50,7 +51,7 @@
             <input class="centered" type="password" name="password" id="password" value="" passwordCheck="passwordCheck" placeholder="Ingrese su contraseña">
           </div>
         </div>
-        <br>
+        <a href="./reiniciarContraseña.html">Me olvide mi contraseña</a>
         <div>
           <button type="submit" id="submit" name="submit">Ingresar</button>
         </div>
