--- a/html/registerCareers.html
+++ b/html/registerCareers.html
@@ -1,4 +1,5 @@
 <!-- registerCareers.html sirve para el registro a las carreras -->
+<!DOCTYPE html>
 <html lang="en">
     <head>
       <meta charset="utf-8">
