--- a/html/registerSubjects.html
+++ b/html/registerSubjects.html
@@ -1,4 +1,5 @@
 <!-- registerSubject.html sirve para el registro de las materias con sus respectivos profesores -->
+<!DOCTYPE html>
 <html lang="en">
     <head>
       <meta charset="utf-8">
