--- a/html/reiniciarContraseña.html
+++ b/html/reiniciarContraseña.html
@@ -32,7 +32,7 @@
                     <li><a href="./carreras.html">Carreras</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Iniciar Sesión</a></li>
+                    <li><a href="./login.html">Iniciar Sesión</a></li>
                 </ul>
             </div>
         </div>
@@ -40,11 +40,17 @@
 
     <h1>Reiniciar Contraseña</h1>
     <br>
-    <p>Para reiniciar su contraseña, ingrese su dirección de correo debajo, si existe en nuestros registros, le enviaremos un email con un link para reiniciar su contraseña.</p>
+    <p>Para reiniciar su contraseña, ingrese su dirección de correo debajo, si existe en nuestros registros, le enviaremos un
+        email con un link para reiniciar su contraseña.</p>
     <br>
-    <form method="POST">
-        <input id="inputEmail" type="email" name="" value="" placeholder="Ingrese su direccion de correo aqui">
-    </form>
+    <div>
+        <form method="POST">
+            <input id="inputEmail" type="email" name="" value="" placeholder="Ingrese su direccion de correo aqui">
+            <br>
+            <br>
+            <button id="submit">Enviar</button>
+        </form>
+    </div>
 
 
 
