--- a/html/registerCatedras.html
+++ b/html/registerCatedras.html
@@ -1,4 +1,5 @@
 <!-- registerCatedras.html sirve para el registro de las catedras con sus respectivos profesores -->
+<!DOCTYPE html>
 <html lang="en">
     <head>
       <meta charset="utf-8">
