--- a/html/carreras.html
+++ b/html/carreras.html
@@ -33,7 +33,7 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#">Iniciar Sesión</a>
+                        <a href="#">Iniciar Sesi&oacute;n</a>
                     </li>
                 </ul>
             </div>
@@ -50,7 +50,7 @@
                     <a href="../Carreras/html/abogacia.html">Abogacia</a>
                 </li>
                 <li>
-                    <a href="../Carreras/html/administracionDeEmpresas.html">Administración de Empresas</a>
+                    <a href="../Carreras/html/administracionDeEmpresas.html">Administraci&oacute;n de Empresas</a>
                 </li>
                 <li>
                     <a href="">Agronomia</a>
@@ -65,10 +65,10 @@
                     <a href="">Ciencias Veterinarias</a>
                 </li>
                 <li>
-                    <a href="">Contador Público</a>
+                    <a href="">Contador P&uacute;blico</a>
                 </li>
                 <li>
-                    <a href="">Diseño Grafico</a>
+                    <a href="">Dise&ntilde;o Grafico</a>
                 </li>
                 <li>
                     <a href="">Ingenieria Informatica</a>
