--- a/html/login.html
+++ b/html/login.html
@@ -30,7 +30,7 @@
     <div class="centered col-md-12">
       <h1>Bienvenido a Universys</h1>
     </div>
-    <h3>Iniciar Sesión:</h3>
+    <h3>Iniciar Sesi&oacute;n:</h3>
     <br>
     <div class="centered row" id="login_block">
 
@@ -45,13 +45,13 @@
         </div>
         <div class="row">
           <div class="col-md-6">
-            <label class="centered" for="password">Contraseña: </label>
+            <label class="centered" for="password">Contrase&ntilde;a: </label>
           </div>
           <div class="col-md-6">
-            <input class="centered" type="password" name="password" id="password" value="" passwordCheck="passwordCheck" placeholder="Ingrese su contraseña">
+            <input class="centered" type="password" name="password" id="password" value="" passwordCheck="passwordCheck" placeholder="Ingrese su contrase&ntilde;a">
           </div>
         </div>
-        <a href="./reiniciarContraseña.html">Me olvide mi contraseña</a>
+        <a href="./reiniciarContrase&ntilde;a.html">Me olvide mi contrase&ntilde;a</a>
         <div>
           <button type="submit" id="submit" name="submit">Ingresar</button>
         </div>
@@ -75,7 +75,7 @@
 
             return true;
         },
-        "La contraseña debe contener al menos una mayuscula, una minuscula y un numero");
+        "La contrase&ntilde;a debe contener al menos una mayuscula, una minuscula y un numero");
 
     $("#login").validate({
       rules: {
