--- a/html/register.html
+++ b/html/register.html
@@ -41,11 +41,11 @@
               <input class="empty" type="string" name="username" id="username" value="">
           </div>
           <div>
-              <label for="password">Contraseña</label>
+              <label for="password">Contrase&ntilde;a</label>
               <input class="empty" type="string" name="password" id="password" value="">
           </div>
           <div>
-              <label for="confirm_password">Confirmar contraseña</label>
+              <label for="confirm_password">Confirmar contrase&ntilde;a</label>
               <input class="empty" type="string" name="confirm_password" id="confirm_password" value="">
           </div>
           <br>
