--- a/html/registerCareers.html
+++ b/html/registerCareers.html
@@ -37,7 +37,7 @@
            <h3>Registro Carreras:</h3>  <!-- Titulo-->
           <form id="registerCareers" action="post"> <!--Formulario para poder registrarse -->
               <div>
-                  <label for="Codigo" id="codigo_lbl">Código:</label>
+                  <label for="Codigo" id="codigo_lbl">C&oacute;digo:</label>
                   <input class="empty" type="int" name="codigo" id="codigo" value="">
               </div>
               <div>
@@ -45,7 +45,7 @@
                   <input class="empty" type="string" name="nombre" id="nombre" value="">
               </div>
               <div>
-                  <label for="Duracion" id="duracion_lbl">Duración:</label>
+                  <label for="Duracion" id="duracion_lbl">Duraci&oacute;n:</label>
                   <input class="empty" type="duracion" name="duracion" id="duracion" value="">
               </div>
               <br>
