--- a/html/registerCatedras.html
+++ b/html/registerCatedras.html
@@ -37,15 +37,15 @@
            <h3>Registro Materias:</h3>  <!-- Titulo-->
           <form id="registerCatedras" action="post"> <!--Formulario para poder registrarse -->
               <div>
-                  <label for="CodigoCatedra" id="codigoCatedra_lbl">Código de Cátedra:</label>
+                  <label for="CodigoCatedra" id="codigoCatedra_lbl">C&oacute;digo de C&aacute;tedra:</label>
                   <input class="empty" type="int" name="codigoCatedra" id="codigoCatedra" value="">
               </div>
               <div>
-                  <label for="CodigoMateria" id="codigoMateria_lbl">Código de Materia:</label>
+                  <label for="CodigoMateria" id="codigoMateria_lbl">C&oacute;digo de Materia:</label>
                   <input class="empty" type="int" name="codigoMateria" id="codigoMateria" value="">
               </div>
               <div>
-                  <label for="MateriaCatedra" id="materiaCatedra_lbl">Materia de la Cátedra:</label>
+                  <label for="MateriaCatedra" id="materiaCatedra_lbl">Materia de la C&aacute;tedra:</label>
                   <input class="empty" type="string" name="materiaCatedra" id="materiaCatedra" value="">
               </div>
               <div>
@@ -53,11 +53,11 @@
                   <input class="empty" type="int" name="aulaAsignada" id="aulaAsignada" value="">
               </div>
               <div>
-                <label for="HorarioCatedra" id="horarioCatedra_lbl">Horario de la Cátedra:</label>
+                <label for="HorarioCatedra" id="horarioCatedra_lbl">Horario de la C&aacute;tedra:</label>
                 <input class="empty" type="time" name="horarioCatedra" id="horarioCatedra" value="">
             </div>
             <div>
-                <label for="DiasCatedra" id="diascatedra_lbl">Dias de Cátedra:</label>
+                <label for="DiasCatedra" id="diascatedra_lbl">Dias de C&aacute;tedra:</label>
                 <input class="empty" type="date" name="diascatedra" id="diascatedras" value="">
             </div>
             <div>
