--- a/html/registerSubjects.html
+++ b/html/registerSubjects.html
@@ -37,7 +37,7 @@
            <h3>Registro Materias:</h3>  <!-- Titulo-->
           <form id="registerSubjects" action="post"> <!--Formulario para poder registrarse -->
               <div>
-                  <label for="Codigo" id="codigo_lbl">Código:</label>
+                  <label for="Codigo" id="codigo_lbl">C&oacute;digo:</label>
                   <input class="empty" type="int" name="codigo" id="codigo" value="">
               </div>
               <div>
