--- a/html/reiniciarContraseña.html
+++ b/html/reiniciarContraseña.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Reiniciar Contraseña | Universys</title>
+    <title>Reiniciar Contrase&ntilde;a | Universys</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
@@ -9,7 +9,7 @@
     <script src="http://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
-    <link href="../css/reiniciarContraseña.css" rel="stylesheet">
+    <link href="../css/reiniciarContrase&ntilde;a.css" rel="stylesheet">
 </head>
 <body>
     <!-- Navbar -->
@@ -32,16 +32,16 @@
                     <li><a href="./carreras.html">Carreras</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="./login.html">Iniciar Sesión</a></li>
+                    <li><a href="./login.html">Iniciar Sesi&oacute;n</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <h1>Reiniciar Contraseña</h1>
+    <h1>Reiniciar Contrase&ntilde;a</h1>
     <br>
-    <p>Para reiniciar su contraseña, ingrese su dirección de correo debajo, si existe en nuestros registros, le enviaremos un
-        email con un link para reiniciar su contraseña.</p>
+    <p>Para reiniciar su contrase&ntilde;a, ingrese su direcci&oacute;n de correo debajo, si existe en nuestros registros, le enviaremos un
+        email con un link para reiniciar su contrase&ntilde;a.</p>
     <br>
     <div>
         <form method="POST">
