--- a/Carreras/html/arquitectura.html
+++ b/Carreras/html/arquitectura.html
@@ -36,7 +36,7 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#">Iniciar Sesión</a>
+                        <a href="#">Iniciar Sesi&oacute;n</a>
                     </li>
                 </ul>
             </div>
@@ -53,7 +53,7 @@
                     <a href="../html/abogacia.html">Abogacia</a>
                 </li>
                 <li>
-                    <a href="../html/administracionDeEmpresas.html">Administración de Empresas</a>
+                    <a href="../html/administracionDeEmpresas.html">Administraci&oacute;n de Empresas</a>
                 </li>
                 <li>
                     <a href="../html/agronomia.html">Agronomia</a>
@@ -68,10 +68,10 @@
                     <a href="../html/cienciasVeterinarias.html">Ciencias Veterinarias</a>
                 </li>
                 <li>
-                    <a href="../html/contadorPublico.html">Contador Público</a>
+                    <a href="../html/contadorPublico.html">Contador P&uacute;blico</a>
                 </li>
                 <li>
-                    <a href="../html/disenoGrafico.html">Diseño Grafico</a>
+                    <a href="../html/disenoGrafico.html">Dise&ntilde;o Grafico</a>
                 </li>
                 <li>
                     <a href="../html/ingenieriaInformatica.html">Ingenieria Informatica</a>
@@ -100,7 +100,7 @@
                     </div>
                     <div class="col-sm-6 col-md-6 col-lg-12">
                         <h3>Turnos Disponibles:</h3>
-                        <p>Mañana: 7hs a 11hs</p>
+                        <p>Ma&ntilde;ana: 7hs a 11hs</p>
                         <p>Tarde: 14hs a 18hs</p>
                         <p>Noche: 19hs a 23hs</p>
                     </div>
