--- a/html/historia.html
+++ b/html/historia.html
@@ -32,7 +32,7 @@
                     <li><a href="./carreras.html">Carreras</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Iniciar Sesión</a></li>
+                    <li><a href="#">Iniciar Sesi&oacute;n</a></li>
                 </ul>
             </div>
         </div>
