Fix action post por method post, issue #13

--- a/html/login.html
+++ b/html/login.html
@@ -34,7 +34,7 @@
     <br>
     <div class="centered row" id="login_block">
 
-      <form id="login" action="post" class="login_form">
+      <form id="login" method="post" class="login_form">
         <div class="row">
           <div class="col-md-6">
             <label class="centered" for="username">Usuario: </label>
