--- a/html/register.html
+++ b/html/register.html
@@ -16,14 +16,13 @@
 </head>
 
 <body>
-  <!-- <script src="js/login.js"></script> -->
   <div class="container-fluid">
     <div class="centered">
       <h1>Bienvenido a Universys</h1>    
     </div>
     <div class="centered"> 
       <h3>Register</h3>
-      <form id="register" action="post">
+      <form id="register" method="post">
           <div>
               <label for="Nombre" id="firstname_lbl">Nombre</label>
               <input class="empty" type="string" name="firstname" id="firstname" value="">
