--- a/html/registerCatedras.html
+++ b/html/registerCatedras.html
@@ -35,7 +35,7 @@
         </div>
         <div class="centered"> 
            <h3>Registro Materias:</h3>  <!-- Titulo-->
-          <form id="registerCatedras" action="post"> <!--Formulario para poder registrarse -->
+          <form id="registerCatedras" method="post"> <!--Formulario para poder registrarse -->
               <div>
                   <label for="CodigoCatedra" id="codigoCatedra_lbl">C&oacute;digo de C&aacute;tedra:</label>
                   <input class="empty" type="int" name="codigoCatedra" id="codigoCatedra" value="">
