--- a/html/registerSubjects.html
+++ b/html/registerSubjects.html
@@ -35,7 +35,7 @@
         </div>
         <div class="centered"> 
            <h3>Registro Materias:</h3>  <!-- Titulo-->
-          <form id="registerSubjects" action="post"> <!--Formulario para poder registrarse -->
+          <form id="registerSubjects" method="post"> <!--Formulario para poder registrarse -->
               <div>
                   <label for="Codigo" id="codigo_lbl">C&oacute;digo:</label>
                   <input class="empty" type="int" name="codigo" id="codigo" value="">
