Se cambio nombre de reiniciarContraseña.html por reiniciarContrasena.html, issue #18

--- a/html/login.html
+++ b/html/login.html
@@ -51,7 +51,7 @@
             <input class="centered" type="password" name="password" id="password" value="" passwordCheck="passwordCheck" placeholder="Ingrese su contrase&ntilde;a">
           </div>
         </div>
-        <a href="./reiniciarContrase&ntilde;a.html">Me olvide mi contrase&ntilde;a</a>
+        <a href="./reiniciarContrasena;a.html">Me olvide mi contrase&ntilde;a</a>
         <div>
           <button type="submit" id="submit" name="submit">Ingresar</button>
         </div>
