--- a/html/reiniciarContrasena.html
+++ b/html/reiniciarContrasena.html
@@ -9,7 +9,7 @@
     <script src="http://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
-    <link href="../css/reiniciarContrase&ntilde;a.css" rel="stylesheet">
+    <link href="../css/reiniciarContrasena.css" rel="stylesheet">
 </head>
 <body>
     <!-- Navbar -->
