Fix JSON, issue #19

--- a/html/login.html
+++ b/html/login.html
@@ -48,7 +48,7 @@
             <label class="centered" for="password">Contrase&ntilde;a: </label>
           </div>
           <div class="col-md-6">
-            <input class="centered" type="password" name="password" id="password" value="" passwordCheck="passwordCheck" placeholder="Ingrese su contrase&ntilde;a">
+            <input class="centered" type="password" name="password" id="password" value="" passwordcheck="passwordCheck" placeholder="Ingrese su contrase&ntilde;a">
           </div>
         </div>
         <a href="./reiniciarContrasena;a.html">Me olvide mi contrase&ntilde;a</a>
@@ -99,7 +99,7 @@
           minlength: "Este campo debe contener al menos 8 caracteres",
           maxlength: "Este campo debe contener maximo 16 caracteres"
         }
-    });
+    }});
   </script>
 </body>
 
